# cloudberrydb

./: .asf.yaml  .gitignore  GNUmakefile.in  README.apache.md  README.md  configure  configure.ac  meson.build  pom.xml
.github/workflows/: README.md  build-cloudberry.yml  build-deb-cloudberry.yml  docker-cbdb-build-containers.yml  docker-cbdb-test-containers.yml  pg16-merge-validation.yml  sonarqube.yml
contrib/: Makefile
contrib/amcheck/: verify_heapam.c
contrib/amcheck/expected/: check_btree.out  check_heap.out
contrib/amcheck/sql/: check_heap.sql
contrib/amcheck/t/: 001_verify_heapam.pl  003_cic_2pc.pl
contrib/auto_explain/: auto_explain.c
contrib/basic_archive/: basic_archive.c
contrib/btree_gin/expected/: bool.out
contrib/btree_gist/expected/: inet.out
contrib/citext/: Makefile
contrib/dblink/: dblink.c
contrib/dblink/expected/: dblink.out
contrib/file_fdw/: Makefile
contrib/hstore_plpython/: Makefile
contrib/indexscan/: indexscan.c
contrib/interconnect/: ic_internal.h
contrib/interconnect/test/: ic_test_env.c
contrib/interconnect/udp/: ic_udpifc.c  ic_udpifc.h
contrib/ltree/expected/: ltree.out
contrib/ltree/sql/: ltree.sql
contrib/pageinspect/: Makefile  bmfuncs.c  brinfuncs.c  gistfuncs.c  hashfuncs.c  rawpage.c
contrib/pax_storage/: CMakeLists.txt
contrib/pax_storage/doc/: README.md
contrib/pg_buffercache/: pg_buffercache_pages.c
contrib/pg_buffercache/expected/: pg_buffercache.out
contrib/pg_buffercache/sql/: pg_buffercache.sql
contrib/pg_prewarm/: autoprewarm.c
contrib/pg_surgery/: heap_surgery.c
contrib/pg_visibility/: pg_visibility.c
contrib/pgcrypto/: Makefile
contrib/pgstattuple/: pgstatapprox.c  pgstatindex.c  pgstattuple.c
contrib/postgres_fdw/: connection.c  deparse.c  option.c  postgres_fdw.c
contrib/udp2/: CMakeLists.txt  Makefile  README.md  ic_modules.c  ic_modules.h  ic_udp2.c  ic_udp2.h
contrib/udp2/ic_common/: CMakeLists.txt  ic_except.hpp  ic_faultinjection.h  ic_types.h  ic_utility.cpp  ic_utility.hpp
contrib/udp2/ic_common/udp2/: ic_udp2.cpp  ic_udp2.h  ic_udp2.hpp  ic_udp2_internal.hpp
devops/: README.md
devops/release/: generate-changelog.sh
devops/sandbox/: .env  Dockerfile.RELEASE.rockylinux9  Dockerfile.main.rockylinux9  README.md  docker-compose-rockylinux9.yml  run.sh
devops/sandbox/000-cbdb-sandbox/: Dockerfile.RELEASE.rockylinux9  Dockerfile.main.rockylinux9  docker-compose-rockylinux9.yml  run.sh
devops/sandbox/configs/: 90-cbdb-limits.conf  90-cbdb-sysctl.conf  gpinitsystem_multinode  gpinitsystem_singlenode  init_system.sh
doc/src/sgml/: custom-rmgr.sgml
gpAux/gpdemo/: gpdemo-defaults.sh
gpcontrib/: Makefile
gpcontrib/gp_exttable_fdw/: extaccess.c  gp_exttable_fdw.c  option.c
gpcontrib/gp_legacy_string_agg/: gp_legacy_string_agg.c
gpcontrib/gp_replica_check/: gp_replica_check.c
gpcontrib/orafce/: assert.c
gpcontrib/pg_hint_plan/: pg_hint_plan.c
mcp-server/: README.md  dotenv.example  pyproject.toml  pytest.ini  run_tests.sh
mcp-server/src/cbmcp/: __init__.py  __main__.py  client.py  config.py  database.py  prompt.py  security.py  server.py
mcp-server/tests/: README.md  test_cbmcp.py  test_database_tools.py
src/: Makefile  Makefile.global.in  Makefile.shlib
src/backend/: Makefile
src/backend/backup/: basebackup.c
src/backend/bootstrap/: bootstrap.c
src/backend/catalog/: Catalog.pm  Makefile  aclchk.c  catalog.c  cdb_schema.sql  genbki.pl  gp_matview_aux.c  heap.c  index.c  indexing.c  main_manifest.c  objectaddress.c  oid_dispatch.c  pg_extprotocol.c  pg_proc.c  pg_publication.c  sql_features.txt  storage.c  storage_directory_table.c  system_functions.sql  system_views.sql
src/backend/cdb/: cdbappendonlystorageread.c  cdbappendonlystoragewrite.c  cdbappendonlyxlog.c  cdbbufferedappend.c  cdbbufferedread.c  cdbcopy.c  cdbgroupingpaths.c  cdblegacyhash.c  cdbllize.c  cdbmutate.c  cdbpath.c  cdbpathlocus.c  cdbplan.c  cdbrelsize.c  cdbsreh.c  cdbsubselect.c  cdbtargeteddispatch.c  cdbtm.c  cdbvarblock.c  cdbvars.c
src/backend/commands/: analyze.c  analyzefuncs.c  analyzeutils.c  async.c  cluster.c  collationcmds.c  copy.c  copyfrom.c  copyfromparse.c  copyto.c  createas.c  dbcommands.c  dirtablecmds.c  dropcmds.c  explain.c  exttablecmds.c  functioncmds.c  indexcmds.c  matview.c  prepare.c  publicationcmds.c  queue.c  sequence.c  storagecmds.c  tablecmds.c  tablecmds_gp.c  tablespace.c  taskcmds.c  trigger.c  user.c  vacuum.c  vacuum_ao.c
src/backend/crypto/: bufenc.c  kmgr.c
src/backend/executor/: Makefile  execDynamicIndexes.c  execExpr.c  execIndexing.c  execMain.c  execPartition.c  execProcnode.c  execUtils.c  nodeAppend.c  nodeAssertOp.c  nodeDynamicBitmapHeapscan.c  nodeDynamicForeignscan.c  nodeDynamicIndexOnlyscan.c  nodeDynamicIndexscan.c  nodeDynamicSeqscan.c  nodeHash.c  nodeHashjoin.c  nodeIndexonlyscan.c  nodeMemoize.c  nodeModifyTable.c  nodeMotion.c  nodePartitionSelector.c  nodeSeqscan.c  nodeSplitMerge.c  nodeSubplan.c  nodeWindowAgg.c  spi.c
src/backend/foreign/: foreign.c
src/backend/fts/: ftsprobe.c
src/backend/gpopt/: CGPOptimizer.cpp  gpdbwrappers.cpp
src/backend/libpq/: Makefile  auth.c  be-gssapi-common.c
src/backend/nodes/: .gitignore  Makefile  copyfuncs.c  copyfuncs.funcs.c  copyfuncs.switch.c  equalfuncs.c  gen_node_support.pl  makefuncs.c  nodeFuncs.c  outfast.c  outfuncs.c  outfuncs_common.c  print.c  readfast.c  readfuncs.c  readfuncs.funcs.c  readfuncs_common.c
src/backend/parser/: analyze.c  gram.y  parse_agg.c  parse_clause.c  parse_cte.c  parse_partition_gp.c  parse_relation.c  parse_utilcmd.c
src/backend/postmaster/: autostats.c  backoff.c  loginmonitor.c  pgarch.c  postmaster.c  syslogger.c
src/backend/replication/: repl_gram.y  slotfuncs.c  syncrep.c  (+1 more)
src/common/: Makefile  archive.c  cryptohash_openssl.c  exec.c  hashfn.c  hmac.c  hmac_openssl.c  kmgr_utils.c  percentrepl.c  relpath.c  sm3.c
src/include/: Makefile  c.h  fmgr.h  miscadmin.h  pg_config.h.in  pgstat.h  postgres.h  varatt.h
src/interfaces/: Makefile
src/port/: pqsignal.c  win32stat.c
src/test/: Makefile
(+666 files in other folders)
