# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "cloudberry-mcp-server"
version = "0.1.0"
description = "MCP server for Apache Cloudberry database interaction"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Shengwen Yang", email = "yangshengwen@gmail.com"},
]
maintainers = [
    {name = "Shengwen Yang", email = "yangshengwen@gmail.com"},
]
license = {text = "Apache License 2.0"}
keywords = ["mcp", "cloudberry", "postgresql", "database", "server", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License, Version 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "fastmcp>=2.10.6",
    "psycopg2-binary==2.9.10",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.12.15",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/apache/cloudberry//tree/main/mcp-server"
Repository = "https://github.com/apache/cloudberry"
Documentation = "https://github.com/apache/cloudberry/mcp-server/tree/main/mcp-server/README.md"

[project.scripts]
cloudberry-mcp-server = "cbmcp.server:main"
